Implemented Functionality to change Passwords

--- a/frontend/src/tailwind.css
+++ b/frontend/src/tailwind.css
@@ -49,4 +49,8 @@
   .profile-portrait-lg {
     @apply object-cover rounded-md w-28 h-28;
   }
+
+  .fieldset {
+    @apply p-3 border-2 border-solid border-slate-300;
+  }
 }
