--- a/frontend/src/tailwind.css
+++ b/frontend/src/tailwind.css
@@ -54,4 +54,8 @@
   .fieldset {
     @apply p-3 border-2 border-solid border-slate-300;
   }
+
+  .sidebar-navlink {
+    @apply cursor-pointer px-3 py-5 block transition duration-300 text-white border-b border-slate-500;
+  }
 }
