--- a/frontend/src/tailwind.css
+++ b/frontend/src/tailwind.css
@@ -58,4 +58,8 @@
   .sidebar-navlink {
     @apply cursor-pointer px-3 py-5 block transition duration-300 text-white border-b border-slate-500;
   }
+
+  .link {
+    @apply cursor-pointer text-blue-600 underline;
+  }
 }
